# annex_rust_server

./: .env  Cargo.toml  Dockerfile  compose.yaml  readme.txt
src/: main.rs
src/models/: auth.rs  cust.rs  estimate.rs  product.rs
src/routes/: cust.rs  dash.rs  estimate.rs  invoice.rs  payment.rs  product.rs  settings.rs  storage.rs
ssl/: cert.pem  key.pem
